# wxmfc

./: CMakeLists.txt  mfctest.cpp  mfctest.h  vcpkg.json
